# packages/api-contracts/contract-ts/src/models/ReviewBatchItem.ts
@@ -1,0 +1,102 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * WishPool API
+ * WishPool core API contract for mobile apps, parent web, admin web, and backend services. All write endpoints are command-oriented and should be called with an Idempotency-Key header. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { FeedbackInput } from './FeedbackInput';
+import {
+    FeedbackInputFromJSON,
+    FeedbackInputFromJSONTyped,
+    FeedbackInputToJSON,
+    FeedbackInputToJSONTyped,
+} from './FeedbackInput';
+
+/**
+ * 
+ * @export
+ * @interface ReviewBatchItem
+ */
+export interface ReviewBatchItem {
+    /**
+     * 
+     * @type {string}
+     * @memberof ReviewBatchItem
+     */
+    submissionId: string;
+    /**
+     * 
+     * @type {ReviewBatchItemDecisionEnum}
+     * @memberof ReviewBatchItem
+     */
+    decision: ReviewBatchItemDecisionEnum;
+    /**
+     * 
+     * @type {FeedbackInput}
+     * @memberof ReviewBatchItem
+     */
+    feedback?: FeedbackInput;
+}
+
+
+/**
+ * @export
+ */
+export const ReviewBatchItemDecisionEnum = {
+    approved: 'approved',
+    needs_revision: 'needs_revision'
+} as const;
+export type ReviewBatchItemDecisionEnum = typeof ReviewBatchItemDecisionEnum[keyof typeof ReviewBatchItemDecisionEnum];
+
+
+/**
+ * Check if a given object implements the ReviewBatchItem interface.
+ */
+export function instanceOfReviewBatchItem(value: object): value is ReviewBatchItem {
+    if (!('submissionId' in value) || value['submissionId'] === undefined) return false;
+    if (!('decision' in value) || value['decision'] === undefined) return false;
+    return true;
+}
+
+export function ReviewBatchItemFromJSON(json: any): ReviewBatchItem {
+    return ReviewBatchItemFromJSONTyped(json, false);
+}
+
+export function ReviewBatchItemFromJSONTyped(json: any, ignoreDiscriminator: boolean): ReviewBatchItem {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'submissionId': json['submissionId'],
+        'decision': json['decision'],
+        'feedback': json['feedback'] == null ? undefined : FeedbackInputFromJSON(json['feedback']),
+    };
+}
+
+export function ReviewBatchItemToJSON(json: any): ReviewBatchItem {
+    return ReviewBatchItemToJSONTyped(json, false);
+}
+
+export function ReviewBatchItemToJSONTyped(value?: ReviewBatchItem | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'submissionId': value['submissionId'],
+        'decision': value['decision'],
+        'feedback': FeedbackInputToJSON(value['feedback']),
+    };
+}
+
