# packages/api-contracts/contract-ts/src/models/ReviewBatchItemResult.ts
@@ -1,0 +1,99 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * WishPool API
+ * WishPool core API contract for mobile apps, parent web, admin web, and backend services. All write endpoints are command-oriented and should be called with an Idempotency-Key header. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ReviewBatchItemResult
+ */
+export interface ReviewBatchItemResult {
+    /**
+     * 
+     * @type {string}
+     * @memberof ReviewBatchItemResult
+     */
+    submissionId: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof ReviewBatchItemResult
+     */
+    ok: boolean;
+    /**
+     * 
+     * @type {string}
+     * @memberof ReviewBatchItemResult
+     */
+    reviewId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ReviewBatchItemResult
+     */
+    code?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ReviewBatchItemResult
+     */
+    message?: string;
+}
+
+/**
+ * Check if a given object implements the ReviewBatchItemResult interface.
+ */
+export function instanceOfReviewBatchItemResult(value: object): value is ReviewBatchItemResult {
+    if (!('submissionId' in value) || value['submissionId'] === undefined) return false;
+    if (!('ok' in value) || value['ok'] === undefined) return false;
+    return true;
+}
+
+export function ReviewBatchItemResultFromJSON(json: any): ReviewBatchItemResult {
+    return ReviewBatchItemResultFromJSONTyped(json, false);
+}
+
+export function ReviewBatchItemResultFromJSONTyped(json: any, ignoreDiscriminator: boolean): ReviewBatchItemResult {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'submissionId': json['submissionId'],
+        'ok': json['ok'],
+        'reviewId': json['reviewId'] == null ? undefined : json['reviewId'],
+        'code': json['code'] == null ? undefined : json['code'],
+        'message': json['message'] == null ? undefined : json['message'],
+    };
+}
+
+export function ReviewBatchItemResultToJSON(json: any): ReviewBatchItemResult {
+    return ReviewBatchItemResultToJSONTyped(json, false);
+}
+
+export function ReviewBatchItemResultToJSONTyped(value?: ReviewBatchItemResult | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'submissionId': value['submissionId'],
+        'ok': value['ok'],
+        'reviewId': value['reviewId'],
+        'code': value['code'],
+        'message': value['message'],
+    };
+}
+
