# packages/api-contracts/contract-ts/src/models/ReviewBatchRequest.ts
@@ -1,0 +1,83 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * WishPool API
+ * WishPool core API contract for mobile apps, parent web, admin web, and backend services. All write endpoints are command-oriented and should be called with an Idempotency-Key header. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { ReviewBatchItem } from './ReviewBatchItem';
+import {
+    ReviewBatchItemFromJSON,
+    ReviewBatchItemFromJSONTyped,
+    ReviewBatchItemToJSON,
+    ReviewBatchItemToJSONTyped,
+} from './ReviewBatchItem';
+
+/**
+ * 
+ * @export
+ * @interface ReviewBatchRequest
+ */
+export interface ReviewBatchRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof ReviewBatchRequest
+     */
+    clientMutationId: string;
+    /**
+     * 
+     * @type {Array<ReviewBatchItem>}
+     * @memberof ReviewBatchRequest
+     */
+    items: Array<ReviewBatchItem>;
+}
+
+/**
+ * Check if a given object implements the ReviewBatchRequest interface.
+ */
+export function instanceOfReviewBatchRequest(value: object): value is ReviewBatchRequest {
+    if (!('clientMutationId' in value) || value['clientMutationId'] === undefined) return false;
+    if (!('items' in value) || value['items'] === undefined) return false;
+    return true;
+}
+
+export function ReviewBatchRequestFromJSON(json: any): ReviewBatchRequest {
+    return ReviewBatchRequestFromJSONTyped(json, false);
+}
+
+export function ReviewBatchRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): ReviewBatchRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'clientMutationId': json['clientMutationId'],
+        'items': ((json['items'] as Array<any>).map(ReviewBatchItemFromJSON)),
+    };
+}
+
+export function ReviewBatchRequestToJSON(json: any): ReviewBatchRequest {
+    return ReviewBatchRequestToJSONTyped(json, false);
+}
+
+export function ReviewBatchRequestToJSONTyped(value?: ReviewBatchRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'clientMutationId': value['clientMutationId'],
+        'items': ((value['items'] as Array<any>).map(ReviewBatchItemToJSON)),
+    };
+}
+
