# packages/api-contracts/contract-ts/src/models/ReviewBatchResponse.ts
@@ -1,0 +1,90 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * WishPool API
+ * WishPool core API contract for mobile apps, parent web, admin web, and backend services. All write endpoints are command-oriented and should be called with an Idempotency-Key header. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { ReviewBatchItemResult } from './ReviewBatchItemResult';
+import {
+    ReviewBatchItemResultFromJSON,
+    ReviewBatchItemResultFromJSONTyped,
+    ReviewBatchItemResultToJSON,
+    ReviewBatchItemResultToJSONTyped,
+} from './ReviewBatchItemResult';
+import type { ReviewBatchResponseSummary } from './ReviewBatchResponseSummary';
+import {
+    ReviewBatchResponseSummaryFromJSON,
+    ReviewBatchResponseSummaryFromJSONTyped,
+    ReviewBatchResponseSummaryToJSON,
+    ReviewBatchResponseSummaryToJSONTyped,
+} from './ReviewBatchResponseSummary';
+
+/**
+ * 
+ * @export
+ * @interface ReviewBatchResponse
+ */
+export interface ReviewBatchResponse {
+    /**
+     * 
+     * @type {ReviewBatchResponseSummary}
+     * @memberof ReviewBatchResponse
+     */
+    summary: ReviewBatchResponseSummary;
+    /**
+     * 
+     * @type {Array<ReviewBatchItemResult>}
+     * @memberof ReviewBatchResponse
+     */
+    results: Array<ReviewBatchItemResult>;
+}
+
+/**
+ * Check if a given object implements the ReviewBatchResponse interface.
+ */
+export function instanceOfReviewBatchResponse(value: object): value is ReviewBatchResponse {
+    if (!('summary' in value) || value['summary'] === undefined) return false;
+    if (!('results' in value) || value['results'] === undefined) return false;
+    return true;
+}
+
+export function ReviewBatchResponseFromJSON(json: any): ReviewBatchResponse {
+    return ReviewBatchResponseFromJSONTyped(json, false);
+}
+
+export function ReviewBatchResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ReviewBatchResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'summary': ReviewBatchResponseSummaryFromJSON(json['summary']),
+        'results': ((json['results'] as Array<any>).map(ReviewBatchItemResultFromJSON)),
+    };
+}
+
+export function ReviewBatchResponseToJSON(json: any): ReviewBatchResponse {
+    return ReviewBatchResponseToJSONTyped(json, false);
+}
+
+export function ReviewBatchResponseToJSONTyped(value?: ReviewBatchResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'summary': ReviewBatchResponseSummaryToJSON(value['summary']),
+        'results': ((value['results'] as Array<any>).map(ReviewBatchItemResultToJSON)),
+    };
+}
+
