# packages/api-contracts/contract-ts/src/models/index.ts
@@ -86,6 +86,11 @@ export * from './RegisterPushTokenRequest';
 export * from './RelatedResource';
 export * from './RetryOutboxEventRequest';
 export * from './Review';
+export * from './ReviewBatchItem';
+export * from './ReviewBatchItemResult';
+export * from './ReviewBatchRequest';
+export * from './ReviewBatchResponse';
+export * from './ReviewBatchResponseSummary';
 export * from './ReviewSubmissionRequest';
 export * from './RevokeAdminMediaAccessGrantRequest';
 export * from './RevokeDeviceRequest';
